# cartoweave

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  cartoweave_payload_latest.json  pyproject.toml  pytest.ini  viz.yaml
.github/workflows/: ci.yml
configs/: compute.internals.yaml  compute.public.yaml  compute.tuning.yaml  config.yaml  data.yaml  deprecations.yaml  run.yaml  solver.internals.yaml  solver.public.yaml  solver.tuning.yaml  viz.yaml
docs/: DEVELOPING_FORCES.md  compute.md
examples/: __init__.py  e2e_data_compute_viz.py  min_solve.py  minimal_fit.py  minimal_solve.py  random_solve_plan.py  random_timeline.py  run_payload_shot_viz.py  solve_layout_api.py
examples/configs/: compute_min.json  demo.yaml
examples/examples/: _scene_cache.npz
examples/scenes/: scene_min.json
legacy_forces/: term_area_softout.py  term_focus.py  term_label_label_disk.py
scripts/: causal.py  force_grad_validate.py  selfcheck_anchors.py  smoke_viz.py
scripts/diagnostics/: anchor_debug.py
src/: yaml.py
src/cartowave/: __init__.py  api.py
src/cartoweave/: __init__.py  api.py  cli.py  config_loader.py  labels.py  layout_config.py  logging.py  logging_util.py  types.py
tests/: _util_smooth.py  conftest.py  test_action_reaction_ll.py  test_actions_only_driver.py  test_actions_strict.py  test_active0_alignment.py  test_anchor_sdf_smooth_rect.py  test_anchors.py  test_api_solve.py  test_area_anchor_target_alias.py  test_area_embed_smoke.py  test_area_orientation_invariance.py  test_area_terms_smooth.py  test_array_utils.py  test_auto_calib_unit.py  test_autosave_and_load_roundtrip.py  test_behavior_integration_min.py  test_behavior_pipe.py  test_boundary_locate_asymmetry.py  test_boundary_symmetry.py  test_bridge_warns.py  test_calib_defaults.py  test_calib_profiles.py  test_calibration.py  test_calibration_area_terms.py  test_capture_mode.py  test_cli_solve_e2e.py  test_compute_enabled_terms.py  test_config_bridge.py  test_config_completeness.py  test_config_loader.py  test_config_runtime.py  test_config_strict.py  test_config_system.py  test_conservation_active_only.py  test_contract_and_pipeline_sanity.py  test_contracts_solvepack.py  test_data_api_steps.py  test_data_defaults_wired.py  test_data_random.py  (+88 more)
tests/compute/: test_area_cross.py
tools/: dev_checks.sh  dump_current_defaults.py  refactor_imports_contracts.py
(+144 files in other folders)
