[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cartoweave"
version = "0.1.0"
description = "Map label layout engine (points/lines/areas) with pluggable forces and solvers."
authors = [{name="Ally Rover Lab"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pytest>=8.4.1",
    "pyyaml>=6.0",
    "pillow>=11.3.0",
    "pluggy>=1.6.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.2",

]
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
cartoweave = "cartoweave.cli:main"
[project.optional-dependencies]
test = ["pytest"]


[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E","F","I","B","UP","N","S","C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
strict_optional = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["cartoweave*"]
exclude = ["archive*"]
