[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cartoweave"
version = "0.1.0"
description = "Cartographic label layout solver with YAML-configurable forces"
readme = "README.md"
authors = [{ name = "Yuanzheng" }]
license = { text = "MIT" }
dependencies = ["numpy", "pyyaml"]

[tool.setuptools.packages.find]
where = ["."]
